# waverunner

./: .coverage  .gitignore  BENCHMARK_REPORT.md  CLAUDE.md  CONTINUITY.md  FIXES_SUMMARY.md  LICENSE  PERSONA_ANALYSIS.md  PERSONA_MODELS.md  PROJECT_STRUCTURE.md  README.md  TODO.md  benchmark_results.json  pyproject.toml
dashboard/: waves.js
tests/: __init__.py  test_anthropic_provider.py  test_architecture_contract.py  test_board.py  test_board_overwrite_protection.py  test_cost_tracking.py  test_critical_bugs_integration.py  test_determine_validate_cmd.py  test_directory_awareness.py  test_git_integration.py  test_personas.py  test_providers.py  test_ralph_loop.py  test_reaper_hybrid.py  test_reaper_intelligence.py  test_reaper_resize.py  test_reaper_retry.py  test_reestimation_triggers.py  test_resurrection_negotiation.py  test_sprint_no_freeze.py  test_wave_calculation.py  test_wave_integration_guard.py  test_yaml_error_handling.py  test_yaml_parsing.py
waverunner/: __init__.py  agent.py  benchmark.py  cli.py  cost_tracker.py  dashboard.py  dashboard_events.py  dashboard_server.py  git_integration.py  models.py  personas.py  prompts.py  providers.py  ui.py
waverunner/dashboard/: MOST_INTERESTING_FILE_REPORT.md  dashboard.js  index.html  style.css
